<resources>
    <string name="app_name" translatable="false">insightof.me</string>
    <string name="web_root" translatable="false">insightof.me</string>
    <string name="conditions_link" translatable="false">https://insightof.me/conditions</string>
    <string name="locale">tr</string>
    <string name="activity_label_profile">Profil</string>
    <string name="activity_label_results">Sonuçlar</string>
    <string name="activity_label_search">Arkadaşlarını Bul</string>
    <string name="activity_label_register">Kayıt Ol</string>
    <string name="activity_label_new_test">Test Oluştur</string>
    <string name="activity_label_rate_user">%1$s\'%2$s değerlendir</string>
    <string name="activity_label_edit_profile">Profili Düzenle</string>
    <string name="activity_label_change_password">Parola Değiştir</string>
    <string name="activity_label_options">Seçenekler</string>
    <string name="error_login_failed">Giriş bilgilerin yanlış. Lütfen Tekrar dene.</string>
    <string name="error_username_empty">Kullanıcı adı boş olamaz.</string>
    <string name="error_password_empty">Parola boş olamaz.</string>
    <string name="error_conditions_not_accepted">Kullanım koşullarını kabul etmen gerekiyor.</string>
    <string name="error_no_connection">insightof.me\' ye bağlanılamıyor, Lütfen ağ bağlantını kontrol edip tekrar dene.</string>
    <string name="error_login_again">Hesabına giriş yapılamadı. Lütfen tekrar giriş yap.</string>
    <string name="error_check_connection">Bağlantınızı kontrol ediniz.</string>
    <string name="error_captcha_validation">Maalesef isteğini doğrulayamadık, lütfen daha sonra tekrar dene</string>
    <string name="error_email_empty">Email alanı boş olamaz</string>
    <string name="error_username_not_legal">Lütfen uygun bir kullanıcı adı seçiniz</string>
    <string name="error_username_taken">Bu kullanıcı adı alınmış</string>
    <string name="error_email_already_exist">Bu email sistemimizde kayıtlıdır.</string>
    <string name="error_email_not_legal">E-mail uygun değildir.</string>
    <string name="error_password_not_legal">Parola uygun değildir.</string>
    <string name="error_desc_session_suspended">Bu üyelik 3 dakika askıya alınmıştır.</string>
    <string name="error_invalid_file_type">Lütfen uygun bir dosya seçiniz.</string>
    <string name="error_invalid_file_size">Dosya boyutu çok büyük</string>
    <string name="error_session_expired">Oturumun süresi dolmuştur. Tekrar giriş yapınız.</string>
    <string name="error_current_password_wrong">Geçerli parolan yanlış.</string>
    <string name="error_google_signin">Google hesabınla giriş yaparken bir sorun oluştu. Lütfen daha sonra tekrar dene.</string>
    <string name="error_twitter_signin">X hesabınla giriş yaparken bir sorun oluştu. Lütfen daha sonra tekrar dene.</string>
    <string name="info_reward_ad_not_loaded">Şu an için sana gösterebileceğimiz uygun bir reklam bulunmuyor. Lütfen daha sonra tekrar dene.</string>
    <string name="input_error_enter_current_password">Geçerli parolanı girmelisin</string>
    <string name="input_error_enter_new_pass">Yeni bir parola girmelisin</string>
    <string name="input_error_password_mismatch">Parolalar eşleşmiyor</string>
    <string name="input_error_field_required">Bu alan boş olamaz.</string>
    <string name="message_process_succeed">İşlem başarılı</string>
    <string name="message_logout_succeed">Çıkış Başarılı</string>
    <string name="message_register_succeed">Kayıt Başarılı</string>
    <string name="message_earn_reward_succeed">Ödülünüz hesabınıza aktarılmıştır.</string>
    <string name="hint_login_uid">Kullanıcı Adı veya E-Posta</string>
    <string name="hint_login_password">Parola</string>
    <string name="hint_searchbar_username">Kullanıcı Adı</string>
    <string name="hint_change_password_new_password_again">Yeni Parola (Tekrar)</string>
    <string name="hint_change_password_new_password">Yeni parola</string>
    <string name="hint_change_password_current_password">Geçerli parola</string>
    <string name="hint_change_info_username">Kullanıcı Adı</string>
    <string name="hint_change_info_email">E-posta</string>
    <string name="hint_change_info_personal_information">Hakkında</string>
    <string name="hint_register_uid">Kullanıcı Adı</string>
    <string name="hint_register_email">E-Posta</string>
    <string name="hint_register_password">Parola</string>
    <string name="action_yes">Evet</string>
    <string name="action_no">Hayır</string>
    <string name="action_close">Kapat</string>
    <string name="action_ok">Tamam</string>
    <string name="action_cancel">İptal</string>
    <string name="action_try_again">Tekrar Dene</string>
    <string name="action_btn_new_test">Test Oluştur</string>
    <string name="action_btn_share_test">Testini Paylaş</string>
    <string name="action_btn_share_results">Sonuç Paylaş</string>
    <string name="action_btn_change_avatar">Değiştir</string>
    <string name="action_login">Giriş Yap</string>
    <string name="action_register">Kayıt Ol</string>
    <string name="action_agreement_link"><font color="#2d2846" fontWeight="500"><a  href="https://insightof.me/conditions">Kullanım koşulları</a></font><font color="#ffffff" fontWeight="300">\'nı okudum ve kabul ediyorum.</font></string>
    <string name="action_sign_out">Oturumu Kapat</string>
    <string name="action_save">Kaydet</string>
    <string name="action_create_test">Test Oluştur</string>
    <string name="action_get_ego_points">Şimdi Ego Puanlarını Al</string>
    <string name="action_get_ego">Ego kazan</string>
    <string name="action_login_via_google">Google ile Giriş Yap</string>
    <string name="action_login_via_facebook">Facebook ile Giriş Yap</string>
    <string name="action_login_via_twitter">X ile Giriş Yap</string>
    <string name="action_create_new_account" ><font color='#674D9F'>Hesap Oluştur</font></string>
    <string name="action_read_more" >Daha Fazla</string>
    <string name="action_btn_continue" >Devam</string>
    <string name="action_btn_back" >Geri</string>
    <string name="action_btn_start" >Başla</string>
    <string name="body_share_test">Beni nasıl görüyorsun? Kişilik özelliklerimi kimliğini gizleyerek değerlendir. %1$s</string>
    <string name="body_share_results">Arkadaşlarıma göre kişilik özelliklerim: %1$sSen de beni değerlendir: %2$s</string>
    <string name="content_about">"insightof.me arkadaşlarınızın kişiliğinizle ilgili değerlendirme yapabileceği bir sosyal platformdur. insightof.me ile oluşturacağınız kendinize özel testiniz sayesinde, arkadaşlarınız sizi farklı kişilik özellikleri üzerinden oylarlar. insightof.me bütün bu değerlendirmelerin ortalama değerlerini hesaplayarak, sizi en çok betimleyen altı özelliğinizi öne çıkarır. Bu özellikler arkadaşlarınızın hakkınızda düşündükleri ve çevreniz tarafından nasıl gözlemlendiğiniz ile ilgili ipuçları sunabilir. "</string>
    <string name="info_ads_desc">Reklam izleyerek ego puanı kazanabilirsin. Ego puanın arttıkça sonuçları görmek için gerekli değerlendirme sayın azalacak.</string>
    <string name="info_no_test">Henüz test oluşturmamışsın. Arkadaşlarının seni değerlendirebilmesi için önce bir test oluşturmalısın. Yeterli sayıda değerlendirmeye ulaştığında kişilik özelliklerini görebileceksin</string>
    <string name="info_no_test_card_title">Henüz Test Oluşturmamışsın</string>
    <string name="info_no_test_card_bottom">Arkadaşların tarafından değerlendirilebilmen için arkadaşlarına sormak istediğin kişilik özelliklerini belirlemelisin.</string>
    <string name="info_waiting_card_title">Kalan sonuçlarını şimdi öğren</string>
    <string name="info_waiting_card_bottom">Kişilik tipini ve boyutlarını öğrenebilmek için %1$s değerlendirmeye daha ihtiyacın var. Ego puanları kazanarak daha fazla beklemeden sonuçlarını görebilirsin.</string>
    <string name="info_share_test">Arkadaşlarının seni değerlendirebilmeleri için testini arkadaşların ile paylaşmalısın. Değerlendirme sayın arttıkça daha detaylı sonuçlar görebileceksin.</string>
    <string name="waiting_card_no_result_title">Değerlendirilmelerin Bekleniyor…</string>
    <string name="waiting_card_no_result_description">En çok öne çıkan özelliğini tespit edebilmek için en az beş arkadaşının değerlendirmesine ihtiyacın var. Kişilik testini arkadaşlarınla paylaşarak değerlendirme sayını arttırabilirsin.</string>
    <string name="waiting_card_partial_title">Kişilik Tipini şimdi keşfet </string>
    <string name="waiting_card_partial_description">Kişilik tipini ve boyutlarını görebilmen için daha fazla değerlendirmeye ihtiyacın var. Ego puanları kazanarak daha fazla beklemeden sonuçlarını görebilirsin.</string>
    <string name="info_change_password">insightof.me hesabına giriş yapmak için kullanacağın güvenli bir parola belirle.</string>
    <string name="info_title_no_test_result">Test Oluştur</string>
    <string name="info_no_test_result">Kişilik özelliklerini öğrenebilmek için kişilik testini oluşturman ve arkadaşlarınla paylaşman gerekiyor.</string>
    <string name="header_register">Arkadaşlarının gözünden\nkendini gör.</string>
    <string name="header_result_page_title">Karakter Özelliklerin</string>
    <string name="label_openness">Yeniliğe</string>
    <string name="label_openness_left">Açık</string>
    <string name="label_openness_right">Kapalı</string>
    <string name="label_conscientiousness">Görev Bilinci</string>
    <string name="label_conscientiousness_left">Yüksek</string>
    <string name="label_conscientiousness_right">Düşük</string>
    <string name="label_extraversion">Tutumu</string>
    <string name="label_extraversion_left">Dışa Dönük</string>
    <string name="label_extraversion_right">İçe Dönük</string>
    <string name="label_agreeableness">Çevreye</string>
    <string name="label_agreeableness_left">Uyumlu</string>
    <string name="label_agreeableness_right">Uyumsuz</string>
    <string name="label_neuroticism">Duyguları</string>
    <string name="label_neuroticism_left">Çalkantılı</string>
    <string name="label_neuroticism_right">Dengeli</string>
    <string name="info_create_test_title">Yeni Test Oluştur</string>
    <string name="info_personality_type_title">Kişilik Tipi</string>
    <string name="info_create_test_description">Test mi oluşturmak istiyorsun? Hemen tıkla!</string>
    <string name="guide_content_1">"   Arkadaşlarının seni değerlendirmesi için kendine özel bir kişilik testi oluştur."</string>
    <string name="guide_content_2">Oluşturduğun testini yakın arkadaşlarınla paylaş, arkadaşların anonim olarak kişiliğini değerlendirsinler.</string>
    <string name="guide_content_3">En çok öne çıkan karakter özelliklerin ve arkadaşlarının senin hakkındaki genel görüşleri hakkında fikir sahibi ol.</string>
    <string name="guide_header_1">Bir Test Oluştur</string>
    <string name="guide_header_2">Arkadaşların Seni Değerlendirsin</string>
    <string name="guide_header_3">Gerçek Kişilik\n Özelliklerini Keşfet</string>
    <string name="info_search">insightof.me\' de kayıtlı arkadaşlarını bulmak için kullanıcı adıyla arama yap.</string>
    <string name="default_bio_search">insightof.me kullanıcısı.</string>
    <string name="login_text_header">Karakter Özelliklerini Öğren</string>
    <string name="login_text_sub">Arkadaşlarına sorarak gerçek kişilik\nözelliklerini öğren</string>
    <string name="option_edit_profile">Profili Düzenle</string>
    <string name="option_edit_profile_desc">Kullanıcı adın, açıklaman gibi bilgileri değiştir.</string>
    <string name="option_password">Giriş ve Güvenlik</string>
    <string name="option_password_desc">Parolanı veya giriş yöntemini değiştir.</string>
    <string name="option_about">Hakkında</string>
    <string name="option_about_desc">insightof.me hakkında detaylı bilgi al.</string>
    <string name="option_licenses">Lisans Bilgileri</string>
    <string name="call_or_connect_via">Ya Da</string>
    <string name="desc_call_sign_in">Bir Hesabın Var Mı?</string>
</resources>