<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="com.allybros.superego.activity.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/brandLogo"
            android:layout_width="208.125dp"
            android:layout_height="37dp"
            android:layout_marginTop="21dp"
            android:src="@drawable/brand_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRegisterHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/login_text_header"
            android:textColor="@color/White"
            android:textFontWeight="600"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandLogo" />

        <LinearLayout
            android:id="@+id/cardFormRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="35dp"
            android:background="@color/transparent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterHeader">

            <TextView
                android:id="@+id/inputLayoutRegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/hint_register_uid"
                android:textColor="@color/White"
                android:textFontWeight="500"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etRegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/et_background"
                android:fontFamily="@font/noto_sans"
                android:inputType="text"
                android:padding="8dp" />

            <TextView
                android:id="@+id/inputLayoutRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/hint_register_email"
                android:textColor="@color/White"
                android:textFontWeight="500"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etRegisterMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/et_background"
                android:fontFamily="@font/noto_sans"
                android:inputType="text"
                android:padding="8dp" />


            <TextView
                android:id="@+id/inputLayoutRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_register_password"
                android:textColor="@color/White"
                android:textFontWeight="500"
                android:textSize="12sp" />

            <!--TODO: Change these input area with component-->
            <RelativeLayout
                android:id="@+id/rlOldPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutOldPassword">

                <EditText
                    android:id="@+id/etRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/et_background"
                    android:fontFamily="@font/noto_sans"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="48dp"
                    android:paddingBottom="8dp"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_visibility" />
            </RelativeLayout>

            <!--Input Agreement -->
            <LinearLayout
                android:id="@+id/layoutAgreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="11dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxAgreement"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/selector_check_box"
                    android:button="@color/White"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAgreementRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/noto_sans"
                    android:layout_marginStart="5dp"
                    android:textSize="11sp"
                    android:text="@string/action_agreement_link"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/checkboxAgreement"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <Button
                android:id="@+id/btSignUp"
                style="@style/SegoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/action_register"
                android:textColor="@color/White"
                android:textFontWeight="600"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llConnectCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardFormRegister">


            <View
                android:layout_width="110dp"
                android:layout_height="1.5dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:background="@drawable/horizontal_line" />

            <TextView
                android:id="@+id/tvConnectCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:text="@string/call_or_connect_via"
                android:textColor="@color/fragmentBackground"
                android:textFontWeight="600"
                android:textSize="14sp" />

            <View
                android:layout_width="110dp"
                android:layout_height="1.5dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:background="@drawable/horizontal_line" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/socialButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llConnectCall">

            <Button
                android:id="@+id/btSignInGoogle"
                style="@style/SegoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/google"
                android:drawableLeft="@drawable/brand_google"
                android:gravity="center"
                android:text="@string/action_login_via_google"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btSignInFacebook"
                app:layout_constraintTop_toBottomOf="@+id/cardFormLogin" />

            <Button
                android:id="@+id/btSignInFacebook"
                style="@style/SegoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/facebook"
                android:drawableLeft="@drawable/brand_facebook"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/action_login_via_facebook"/>

        </LinearLayout>




        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progressViewRegister"
            android:visibility="gone"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:translationZ="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardFormRegister"
            app:layout_constraintEnd_toEndOf="@+id/cardFormRegister"
            app:layout_constraintStart_toStartOf="@+id/cardFormRegister"
            app:layout_constraintTop_toTopOf="@+id/cardFormRegister"
            android:indeterminate="true"
            app:mpb_progressStyle="circular"
            app:mpb_progressTint="@color/materialPurple"
            android:indeterminateTint="@color/materialPurple"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#2d2846"
            android:textSize="12sp"
            android:onClick="onSignInButtonClicked"
            android:fontFamily="@font/noto_sans"
            android:textFontWeight="400"
            android:text="@string/desc_call_sign_in"
            app:layout_constraintBottom_toTopOf="@+id/tvSignIn" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:fontFamily="@font/noto_sans"
            android:onClick="onSignInButtonClicked"
            android:textSize="12sp"
            android:textFontWeight="500"
            android:text="@string/action_login"
            android:textColor="#553C8B"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>