<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/guideBackground">

    <TextView
        android:id="@+id/tvGuideTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#3b3b88"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvGuideTitle">

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="@+id/pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@drawable/selector_tab"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />

    <Button
        android:id="@+id/btGoForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/transparent"
        android:textAllCaps="false"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
        android:fontFamily="@font/cantarell_bold"
        android:textStyle="bold"
        android:text="@string/action_btn_continue"
        android:textColor="#000066"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></Button>

    <Button
        android:id="@+id/btGoForwardCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/transparent"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
        android:fontFamily="@font/cantarell_bold"
        android:textStyle="bold"
        android:text="@string/action_btn_continue"
        android:textAllCaps="false"
        android:textColor="#000066"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <Button
        android:id="@+id/btGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        android:fontFamily="@font/cantarell_bold"
        android:textStyle="bold"
        android:text="@string/action_btn_back"
        android:textColor="#000066"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>
